[2단계 - 블랙잭(베팅)] 이스트(신동훈) 미션 제출합니다. (#358)
* refactor(blackjack/domain/user/Score): Score 클래스 내에서만 사용하는 상수를 private으로 전환

* refactor(blackjack/domain/card/Cards): 매직넘버의 상수화

* refactor(blackjack/domain/card/Deck): 덱이 다 소진된 경우에 대한 확인 로직 구현 변경

* docs(README.md): 2단계 구현 목록 추가

* test(blackjack/domain/result/BettingBoxTest): 수익을 반환해주는 기능에 대한 테스트 작성

* test(blackjack/domain/state): 스테이트 생성에 대한 테스트코드 작성

* feat(blackjack/domain/state): 상태 생성 기능 구현

* feat(blackjack/domain/state): 카드 추가시 버스트가 나면 버스트 상태로 바꿔주는 기능 구현

* feat(blackjack/domain/state): 스테이,블랙잭,버스트 상태가 되었을 경우 draw, stay하면 에러가 발생하는 기능 구현

* feat(blackjack/domain/state): 버스트인 상태에서의 수익 계산하는 기능 구현

* feat(blackjack/domain/state): 블랙잭인 상태에서 수익을 계산하는 기능 구현

* feat(blackjack/domain/state): 스테이 상태에서 수익을 계산하는 기능 구현

* docs(README.md): 2단계 구현 목록 추가

* refactor(blackjack/domain/user/Dealer): 딜러의 카드와 비교하는 기능의 인수를 Cards객체로 변경

* feat: running 상태인지 확인하는 기능 구현

* feat: 컨트롤러와 기존 도메인에 상태패턴 적용

* feat: 최종 수익을 결정하는 기능 구현

* feat: 최종 수익을 출력하는 기능 구현

* refactor(blackjack): 메서드의 순서 정렬

* refactor(blackjack/domain/result/BettingBox): Map에 Profit을 추가하는 기능에 대한 메서드 분리

* refactor(blackjack/BlackJackGameController): 불필요한 인자 전달 제거

* refactor(blackjack/domain/card/Deck): DeckStrategy를 Deck으로 이름 변경

* refactor(blackjack/domain/result): BettingBox를 Profit으로 이름 변경

* refactor(blackjack/domain/state): 클래스 내부에서만 사용되는 메서드를 private으로 제한

* refactor(blackjack/domain/user/Players): players 리스트를 반환해줄때 객체를 복사해서 넘겨주어 상태를 변경하지 못하도록 변경

* refactor(blackjack/domain/state): 상속구조 변경

* refactor(blackjack/domain/state): 상속구조 변경

* refactor(blackjack/domain/state): 수익계산의 책임을 State에서 Player로 이전

* refactor(blackjack/domain/user/Player): 사용하지 않는 메서드 제거

* refactor(blackjack/BlackJackGameController): 플레이어를 생성하는 기능의 메서드명 변경

* refactor(blackjack/domain/state): InitialTrun을 StateFactory로 이름 변경